# oop-labs

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json
homeworks/LW_OOP_1/: CMakeLists.txt  README.md  main.cpp
homeworks/LW_OOP_1/include/: split_chocolate.hpp
homeworks/LW_OOP_1/src/: split_chocolate.cpp
homeworks/LW_OOP_1/test/: tests.cpp
